WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
241587
Validate descriptor when creating MTLRenderPipelineState
https://bugs.webkit.org/show_bug.cgi?id=241587
Summary
Validate descriptor when creating MTLRenderPipelineState
Dan Glastonbury
Reported
2022-06-13 23:03:16 PDT
Don't pass MTLRenderPipelineDescriptor with invalid color, depth and stencil attachments to MTLDevice newRenderPipelineStateWithDescriptor:error as on HW, such as Intel HD Graphics 6000 and Intel Iris Pro, this will result in a validation assertion inside Metal framework.
Attachments
Add attachment
proposed patch, testcase, etc.
Dan Glastonbury
Comment 1
2022-06-13 23:05:32 PDT
<
rdar://problem/93820440
>
Dan Glastonbury
Comment 2
2022-06-13 23:17:11 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/1494
EWS
Comment 3
2022-06-15 21:16:51 PDT
Committed
r295583
(
251588@main
): <
https://commits.webkit.org/251588@main
> Reviewed commits have been landed. Closing PR #1494 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug